--- a/urls.cfg
+++ b/urls.cfg
@@ -1,5 +1,6 @@
-google=https://google.com
-hn=https://news.ycombinator.com
-reddit=https://reddit.com
-statsig=https://www.statsig.com
-worldclock=http://worldclockapi.com/api/json/utc/now
+cloud=https://cloud.yktaero.space
+git=https://https.yktaero.space
+office=https://office.yktaero.space
+pcb=https://pcb.yktaero.space
+www=https://yktaero.space
+matrix=https://ykts0.matrix.jfkerman.me
