--- a/urls.cfg
+++ b/urls.cfg
@@ -1,5 +1,5 @@
 cloud=https://cloud.yktaero.space
-git=https://https.yktaero.space
+git=https://git.yktaero.space
 office=https://office.yktaero.space
 pcb=https://pcb.yktaero.space
 www=https://yktaero.space
