--- a/urls.cfg
+++ b/urls.cfg
@@ -2,4 +2,5 @@ cloud=https://cloud.yktaero.space
 git=https://git.yktaero.space
 office=https://office.yktaero.space
 pcb=https://pcb.yktaero.space
+auth=https://auth.yktaero.space
 www=https://yktaero.space
